backend/deployment/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-app
  template:
    metadata:
      labels:
        app: schedule-app
        app_context: schedule
        env: staging
    spec:
      containers:
        - name: schedule-app
          image: ghcr.io/andreroggeri/schedule:latest # Replaced in CI/CD pipeline
          ports:
            - containerPort: 8000
