backend/deployment/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: schedule-app
spec:
  selector:
    app: schedule-app
  ports:
    - port: 8000
